# streamlit-process-manager

./: .gitignore  .pdm-python  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: pdm.yml
examples/: example.py
src/streamlit_process_manager/: __init__.py  _core.py  api.py  group.py  manager.py  monitor.py  process.py  proxy.py  types.py
tests/: test_subprocess_manager.py
tests/test_data/: subprocess_loop.py
